[package]
name = "leptos-geo"
version = "0.0.0"
edition = "2021"
authors = ["Daniel Gallups <dsgallups@protonmail.com>"]
description = "Render geo types in leptos"
repository = "https://github.com/dsgallups/isnt-even-nor-odd"
keywords = ["leptos", "geo", "polygon", "svg", "visualization"]
categories = [
    "development-tools::debugging",
    "graphics",
    "multimedia::images",
    "visualization",
]
readme = "README.md"
license = "MIT"

[dependencies]
geo = { version = "0.28.0", default-features = false }
leptos = { version = "0.6.12", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
web-sys = "0.3.69"
